--- a/resume2.0/index.html
+++ b/resume2.0/index.html
@@ -30,7 +30,7 @@
                   工具
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                     <a class="dropdown-item" href="./WeTalk/index.html">聊天软件</a>
+                     <a class="dropdown-item" href="./WeTalk/index.html">聊天软件(HTML,CSS,JS(Without framework))</a>
                      <a class="dropdown-item" href="#">倒计时</a>
                      <a class="dropdown-item" href="#">成绩计算器</a>
                      <a class="dropdown-item" href="./backhome/index.html">核酸检测测试点收集</a>
