--- a/resume2.0/index.html
+++ b/resume2.0/index.html
@@ -62,18 +62,20 @@
           <div class="col-sm-6">
             <div class="card bg-grey">
               <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">项目</h5>
+                <p class="card-text">这里会更新项目</p>
+                <a class="card-text" href="./WeTalk/index.html">聊天软件(HTML,CSS,JS(Without framework))</a>
+                <a class="card-text" href="./backhome/index.html">核酸检测测试点收集</a>
+                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
               </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="card bg-grey">
               <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">经历</h5>
+                <p class="card-text">这里会更新经历</p>
+                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
               </div>
             </div>
           </div>
