--- a/resume2.0/index.html
+++ b/resume2.0/index.html
@@ -64,8 +64,11 @@
               <div class="card-body">
                 <h5 class="card-title">项目</h5>
                 <p class="card-text">这里会更新项目</p>
-                <a class="card-text" href="./WeTalk/index.html">聊天软件(HTML,CSS,JS(Without framework))</a>
-                <a class="card-text" href="./backhome/index.html">核酸检测测试点收集</a>
+                <a class="btn btn-info" href="./WeTalk/index.html">聊天软件(HTML,CSS,JS(Without framework))</a>
+                <br>
+                <a class="btn btn-info" href="./backhome/index.html">核酸检测测试点收集</a>
+                <br>
+                <a class="btn btn-info" href="http://yifengguo.com:8080/StackHub/">Django论坛</a>
                 <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
               </div>
             </div>
