--- a/resume2.0/index.html
+++ b/resume2.0/index.html
@@ -32,7 +32,7 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                      <a class="dropdown-item" href="./WeTalk/index.html">聊天软件(HTML,CSS,JS(Without framework))</a>
                      <a class="dropdown-item" href="#">倒计时</a>
-                     <a class="dropdown-item" href="#">成绩计算器</a>
+                     <a class="dropdown-item" href="http://yifengguo.com:8080/StackHub/">Django论坛</a>
                      <a class="dropdown-item" href="./backhome/index.html">核酸检测测试点收集</a>
                   </div>
                </li>
@@ -69,6 +69,7 @@
                 <a class="btn btn-info" href="./backhome/index.html">核酸检测测试点收集</a>
                 <br>
                 <a class="btn btn-info" href="http://yifengguo.com:8080/StackHub/">Django论坛</a>
+                <br>
                 <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
               </div>
             </div>
